simple working servlet implementation

--- a/1001_Servlet_1/WebContent/index.html
+++ b/1001_Servlet_1/WebContent/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-      <form action = "addRequest">
+      <form action = "addRequest" method = "post">
           <input type = "text" name = "num1"/><br><br>
           <input type = "text" name = "num2"/><br><br>
           
