Servlet Context and Config implementation

--- a/1001_Servlet_ContextConfig/WebContent/index.html
+++ b/1001_Servlet_ContextConfig/WebContent/index.html
@@ -5,6 +5,9 @@
      <title>Client File</title>
 </head>
 
+
+<! --using servlet 2-->
+
 <body>
      <form action = "request2" method = "get">
          <input type = "text" name = "name"/><br><br>
