--- a/1002_JSP/WebContent/index.html
+++ b/1002_JSP/WebContent/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-     <form action = "add.jsp" method = "get">
+     <form action = "add.jsp" method = "post">
           <input type = "text" name = "num1"/><br><br>
           <input type = "text" name = "num2"/><br><br>
           
